--- a/.eslintrc
+++ b/.eslintrc
@@ -11,6 +11,7 @@
     "plugin:import/typescript",
     "plugin:react/jsx-runtime",
     "airbnb",
+    "airbnb-typescript",
     "prettier"
   ],
   "parserOptions": {
@@ -18,7 +19,8 @@
       "jsx": true
     },
     "ecmaVersion": "latest",
-    "sourceType": "module"
+    "sourceType": "module",
+    "project": ["./tsconfig.json"]
   },
   "plugins": [
     "import",
@@ -58,11 +60,9 @@
   "settings": {
     "react": {
       "version": "detect"
-    }
-  },
-  "import/resolver": {
-    "node": {
-      "paths": ["src"]
+    },
+    "import/resolver": {
+      "typescript": {}
     }
   }
 }
