--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "fwt-gallery-project",
   "version": "0.1.0",
-  "private": true,
+  "private": "false",
+  "homepage": "https://gkmrm.github.io/FWT-Art-Gallery",
   "dependencies": {
     "axios": "^1.4.0",
     "react": "^18.2.0",
@@ -14,7 +15,8 @@
     "build": "react-app-rewired build",
     "test": "react-app-rewired test",
     "eject": "react-scripts eject",
-    "lint": "eslint . --fix --ext .ts,.tsx,.js"
+    "lint": "eslint . --fix --ext .ts,.tsx,.js",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -45,12 +47,15 @@
     "classnames": "^2.3.2",
     "eslint": "^8.43.0",
     "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-airbnb-typescript": "^17.0.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-import-resolver-typescript": "^3.5.5",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "gh-pages": "^5.0.0",
+    "husky": "^8.0.3",
     "prettier": "^2.8.8",
     "react-app-rewire-alias": "^1.1.7",
     "react-app-rewired": "^2.2.1",
