--- a/tsconfig.paths.json
+++ b/tsconfig.paths.json
@@ -3,10 +3,11 @@
     "baseUrl": ".",
     "paths": {
       "@components/*": ["src/components/*"],
+      "@App/*": ["src/components/App/*"],
       "@config/*": ["src/config/*"],
       "@styles/*": ["src/styles/*"],
       "@utils/*": ["src/utils/*"],
-      "@App/*": ["src/App/*"],
+
       "@models/*": ["src/store/models/*"],
       "@hooks/*": ["src/hooks/*"],
       "@icons/*": ["src/assets/icons/*"],
