--- a/.eslintrc
+++ b/.eslintrc
@@ -14,6 +14,7 @@
     "airbnb-typescript",
     "prettier"
   ],
+  "parser": "@typescript-eslint/parser",
   "parserOptions": {
     "ecmaFeatures": {
       "jsx": true
@@ -33,6 +34,7 @@
     "prettier/prettier": ["error", { "endOfLine": "auto" }],
     "@typescript-eslint/no-unused-vars": "error",
     "no-unused-vars": "warn",
+    "import/prefer-default-export": "off",
     "import/order": [
       "error",
       {
@@ -52,10 +54,8 @@
         }
       }
     ],
-    "react/jsx-filename-extension": [
-      1,
-      { "extensions": [".js", ".jsx", "ts", "tsx"] }
-    ]
+    "import/extensions": "off",
+    "react/jsx-filename-extension": [1, { "extensions": ["tsx"] }]
   },
   "settings": {
     "react": {
