--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.60.1",
     "classnames": "^2.3.2",
     "eslint": "^8.43.0",
     "eslint-config-airbnb": "^19.0.4",
