--- a/.eslintrc
+++ b/.eslintrc
@@ -54,12 +54,17 @@
         }
       }
     ],
-    "import/extensions": "off",
+    "import/extensions": 0,
     "react/jsx-filename-extension": [1, { "extensions": ["tsx"] }],
     "react/function-component-definition": 0,
     "react/jsx-props-no-spreading": 0,
     "react/require-default-props": 0,
-    "import/no-extraneous-dependencies": 0
+    "import/no-extraneous-dependencies": 0,
+    "padding-line-between-statements": [
+      "error",
+      { "blankLine": "always", "prev": "*", "next": "return" },
+      { "blankLine": "always", "prev": "*", "next": "export" }
+    ]
   },
   "settings": {
     "react": {
