edit eslint config

--- a/.eslintrc
+++ b/.eslintrc
@@ -64,7 +64,11 @@
       "error",
       { "blankLine": "always", "prev": "*", "next": "return" },
       { "blankLine": "always", "prev": "*", "next": "export" }
-    ]
+    ],
+    "jsx-a11y/no-static-element-interactions": 0,
+    "jsx-a11y/click-events-have-key-events": 0,
+    "jsx-a11y/control-has-associated-label": 0,
+    "react/jsx-boolean-value": 0
   },
   "settings": {
     "react": {
