--- a/package.json
+++ b/package.json
@@ -42,13 +42,14 @@
   },
   "devDependencies": {
     "@storybook/addon-essentials": "^7.0.23",
-    "@storybook/testing-library": "^0.0.14-next.2",
     "@storybook/addon-interactions": "^7.0.23",
     "@storybook/addon-links": "^7.0.23",
+    "@storybook/addon-styling": "^1.3.2",
     "@storybook/blocks": "^7.0.23",
     "@storybook/preset-create-react-app": "^7.0.23",
     "@storybook/react": "^7.0.23",
     "@storybook/react-webpack5": "^7.0.23",
+    "@storybook/testing-library": "^0.0.14-next.2",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
@@ -76,6 +77,7 @@
     "react-app-rewire-alias": "^1.1.7",
     "react-app-rewired": "^2.2.1",
     "sass": "^1.63.6",
+    "tsconfig-paths-webpack-plugin": "^4.0.1",
     "typescript": "^4.4.2",
     "webpack": "^5.88.0"
   }
