Revert "Add frist components"

--- a/tsconfig.paths.json
+++ b/tsconfig.paths.json
@@ -8,8 +8,7 @@
       "@styles/*": ["src/styles/*"],
       "@utils/*": ["src/utils/*"],
       "@hooks/*": ["src/hooks/*"],
-      "@store/*": ["src/store/*"],
-      "@assets/*": ["src/assets/*"]
+      "@store/*": ["src/store/*"]
     }
   }
 }
