--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
     "web-vitals": "^2.1.0"
   },
   "scripts": {
-    "start": "react-app-rewired start",
-    "build": "react-app-rewired build",
-    "test": "react-app-rewired test",
+    "start": "craco start",
+    "build": "craco build",
+    "test": "craco test",
     "eject": "react-scripts eject",
     "lint": "eslint . --fix --ext .ts,.tsx,.js",
     "deploy": "gh-pages -d build",
@@ -41,6 +41,7 @@
     ]
   },
   "devDependencies": {
+    "@craco/craco": "^7.1.0",
     "@storybook/addon-essentials": "^7.0.23",
     "@storybook/addon-interactions": "^7.0.23",
     "@storybook/addon-links": "^7.0.23",
@@ -60,6 +61,7 @@
     "@typescript-eslint/eslint-plugin": "^5.60.1",
     "babel-plugin-named-exports-order": "^0.0.2",
     "classnames": "^2.3.2",
+    "craco-alias": "^3.0.1",
     "eslint": "^8.43.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-typescript": "^17.0.0",
@@ -74,9 +76,8 @@
     "husky": "^8.0.3",
     "prettier": "^2.8.8",
     "prop-types": "^15.8.1",
-    "react-app-rewire-alias": "^1.1.7",
-    "react-app-rewired": "^2.2.1",
     "sass": "^1.63.6",
+    "style-loader": "^3.3.3",
     "tsconfig-paths-webpack-plugin": "^4.0.1",
     "typescript": "^4.4.2",
     "webpack": "^5.88.0"
