--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "axios": "^1.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.14.1",
     "react-scripts": "5.0.1",
     "storybook": "^7.0.23",
     "web-vitals": "^2.1.0"
@@ -42,6 +43,7 @@
   },
   "devDependencies": {
     "@craco/craco": "^7.1.0",
+    "@reduxjs/toolkit": "^1.9.5",
     "@storybook/addon-essentials": "^7.0.23",
     "@storybook/addon-interactions": "^7.0.23",
     "@storybook/addon-links": "^7.0.23",
@@ -75,6 +77,7 @@
     "husky": "^8.0.3",
     "prettier": "^2.8.8",
     "prop-types": "^15.8.1",
+    "react-redux": "^8.1.1",
     "sass": "^1.63.6",
     "tsconfig-paths-webpack-plugin": "^4.0.1",
     "typescript": "^4.4.2",
