--- a/tsconfig.paths.json
+++ b/tsconfig.paths.json
@@ -10,7 +10,8 @@
       "@utils/*": ["src/utils/*"],
       "@hooks/*": ["src/hooks/*"],
       "@store/*": ["src/store/*"],
-      "@assets/*": ["src/assets/*"]
+      "@assets/*": ["src/assets/*"],
+      "@models/*": ["src/store/models/*"]
     }
   }
 }
