--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": "false",
   "homepage": "https://gkmrm.github.io/FWT-Art-Gallery",
   "dependencies": {
+    "@splidejs/react-splide": "^0.7.12",
     "axios": "^1.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
