--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "axios": "^1.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-remove-scroll-bar": "^2.3.4",
     "react-router-dom": "^6.14.1",
     "react-scripts": "5.0.1",
     "storybook": "^7.0.23",
