--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-router-dom": "^6.14.1",
     "react-scripts": "5.0.1",
     "storybook": "^7.0.23",
+    "uid": "^2.0.2",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
