--- a/package.json
+++ b/package.json
@@ -4,16 +4,19 @@
   "private": "false",
   "homepage": "https://gkmrm.github.io/FWT-Art-Gallery",
   "dependencies": {
+    "@hookform/resolvers": "^3.1.1",
     "@splidejs/react-splide": "^0.7.12",
     "axios": "^1.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.45.2",
     "react-remove-scroll-bar": "^2.3.4",
     "react-router-dom": "^6.14.1",
     "react-scripts": "5.0.1",
     "storybook": "^7.0.23",
     "uid": "^2.0.2",
-    "web-vitals": "^2.1.0"
+    "web-vitals": "^2.1.0",
+    "zod": "^3.21.4"
   },
   "scripts": {
     "start": "craco start",
