--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.2",
+    "react-hot-toast": "^2.4.1",
     "react-remove-scroll-bar": "^2.3.4",
     "react-router-dom": "^6.14.1",
     "react-scripts": "5.0.1",
