--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "private": "false",
   "homepage": "https://gkmrm.github.io/FWT-Art-Gallery",
   "dependencies": {
+    "@dnd-kit/core": "^6.0.8",
+    "@dnd-kit/sortable": "^7.0.2",
+    "@dnd-kit/utilities": "^3.2.1",
     "@hookform/resolvers": "^3.1.1",
     "@splidejs/react-splide": "^0.7.12",
     "axios": "^1.4.0",
