--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "@dnd-kit/core": "^6.0.8",
     "@dnd-kit/sortable": "^7.0.2",
     "@dnd-kit/utilities": "^3.2.1",
+    "@fingerprintjs/fingerprintjs": "^4.0.1",
     "@hookform/resolvers": "^3.1.1",
     "@splidejs/react-splide": "^0.7.12",
     "axios": "^1.4.0",
+    "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.2",
