--- a/tsconfig.paths.json
+++ b/tsconfig.paths.json
@@ -1,21 +1,22 @@
 {
   "compilerOptions": {
-    "baseUrl": ".",
+    "baseUrl": "./src",
     "paths": {
-      "@components/*": ["src/components/*"],
-      "@ui-components/*": ["src/ui-components/*"],
-      "@App/*": ["src/components/App/*"],
-      "@config/*": ["src/config/*"],
-      "@styles/*": ["src/styles/*"],
-      "@utils/*": ["src/utils/*"],
-      "@hooks/*": ["src/hooks/*"],
-      "@store/*": ["src/store/*"],
-      "@assets/*": ["src/assets/*"],
-      "@context/*": ["src/context/*"],
-      "@pages/*": ["src/pages/*"],
-      "@models/*": ["src/store/models/*"],
-      "@layout/*": ["src/layout/*"],
-      "@schemas/*": ["src/types/schemas/*"]
+      "@components/*": ["./components/*"],
+      "@ui-components/*": ["./ui-components/*"],
+      "@App/*": ["./components/App/*"],
+      "@config/*": ["./config/*"],
+      "@styles/*": ["./styles/*"],
+      "@utils/*": ["./utils/*"],
+      "@hooks/*": ["./hooks/*"],
+      "@store/*": ["./store/*"],
+      "@assets/*": ["./assets/*"],
+      "@context/*": ["./context/*"],
+      "@pages/*": ["./pages/*"],
+      "@models/*": ["./store/models/*"],
+      "@layout/*": ["./layout/*"],
+      "@schemas/*": ["./types/schemas/*"],
+      "@CONSTANTS/*": ["./config/CONSTANTS/*"]
     }
   }
 }
