--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.2",
     "react-hot-toast": "^2.4.1",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-remove-scroll-bar": "^2.3.4",
     "react-router-dom": "^6.14.1",
     "react-scripts": "5.0.1",
